--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -337,6 +340,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="col-lg-9 col-md-9">
                     <div class="row">
                         <div class="col-lg-4 col-md-6">
@@ -362,9 +366,10 @@
                                 </div>
                             </div>
                         </div>
+                        {% for produto in produtos %}
                         <div class="col-lg-4 col-md-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/shop/shop-2.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="{{ produto.imagem_principal.url }}">
                                     <ul class="product__hover">
                                         <li><a href="img/shop/shop-2.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                                         <li><a href="#"><span class="icon_heart_alt"></span></a></li>
@@ -372,7 +377,7 @@
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="#">Flowy striped skirt</a></h6>
+                                    <h6><a href="#">{{ produto.nome }}</a></h6>
                                     <div class="rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -380,10 +385,11 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <div class="product__price">$ 49.0</div>
+                                    <div class="product__price">$ {{ produto.preco }}</div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                         <div class="col-lg-4 col-md-6">
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/shop/shop-3.jpg">
