:recycle: refactor: Ajuste de codigo

--- a/templates/base.html
+++ b/templates/base.html
@@ -191,35 +191,14 @@
             </div>
         </div>
         <div class="row property__gallery">
+            
             <div class="col-lg-3 col-md-4 col-sm-6 mix women">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/product-1.jpg' %}">
-                        <div class="label new">New</div>
-                        <ul class="product__hover">
-                            <li><a href="{% static 'img/product/product-1.jpg' %}" class="image-popup"><span class="arrow_expand"></span></a></li>
-                            <li><a href="#"><span class="icon_heart_alt"></span></a></li>
-                            <li><a href="#"><span class="icon_bag_alt"></span></a></li>
-                        </ul>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Buttons tweed blazer</a></h6>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <div class="product__price">$ 59.0</div>
-                    </div>
-                </div>
-            </div>
-            {% for produto in produtos %}
-            <div class="col-lg-3 col-md-4 col-sm-6 mix men">
+                {% for produto in produtos %}
                 <div class="product__item">
                     <div class="product__item__pic set-bg" data-setbg="{{ produto.imagem_principal.url }}">
+                        <div class="label new">New</div>
                         <ul class="product__hover">
-                            <li><a href="{% static 'img/product/product-2.jpg' %}" class="image-popup"><span class="arrow_expand"></span></a></li>
+                            <li><a href="{{ produto.imagem_principal.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
                             <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                             <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                         </ul>
@@ -236,8 +215,33 @@
                         <div class="product__price">$ {{ produto.preco }}</div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
+            
+            
+            <div class="col-lg-3 col-md-4 col-sm-6 mix men">
+                <div class="product__item">
+                    <div class="product__item__pic set-bg" data-setbg="">
+                        <ul class="product__hover">
+                            <li><a href="{% static 'img/product/product-2.jpg' %}" class="image-popup"><span class="arrow_expand"></span></a></li>
+                            <li><a href="#"><span class="icon_heart_alt"></span></a></li>
+                            <li><a href="#"><span class="icon_bag_alt"></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="product__item__text">
+                        <h6><a href="#"></a></h6>
+                        <div class="rating">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <div class="product__price">$</div>
+                    </div>
+                </div>
+            </div>
+            
             <div class="col-lg-3 col-md-4 col-sm-6 mix accessories">
                 <div class="product__item">
                     <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/product-3.jpg' %}">
