--- a/templates/base.html
+++ b/templates/base.html
@@ -455,14 +455,15 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="trend__content">
                     <div class="section-title">
-                        <h4>Hot Trend</h4>
+                        <h4>Tendencias</h4>
                     </div>
+                    {% for produto in produto_tendencias %}
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="{% static 'img/trend/ht-1.jpg' %}" alt="">
+                            <img src="{{ produto.imagem_principal.url }}" alt="{{ produto.nome}}" style="height: 5.75rem; width: 5.5rem;">
                         </div>
                         <div class="trend__item__text">
-                            <h6>Chain bucket bag</h6>
+                            <h6>{{ produto.nome }}</h6>
                             <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
@@ -470,10 +471,10 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <div class="product__price">$ 59.0</div>
+                            <div class="product__price">${{ produto.preco }}</div>
                         </div>
                     </div>
-                    <div class="trend__item">
+                    {% comment %} <div class="trend__item">
                         <div class="trend__item__pic">
                             <img src="{% static 'img/trend/ht-2.jpg' %}" alt="">
                         </div>
@@ -504,20 +505,23 @@
                             </div>
                             <div class="product__price">$ 59.0</div>
                         </div>
-                    </div>
+                    </div> {% endcomment %}
+                    {% endfor %}
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="trend__content">
                     <div class="section-title">
-                        <h4>Best seller</h4>
+                        <h4>Mais Vendidos</h4>
                     </div>
+
+                    {% comment %} {{ for produto in produto_mais_vendidos }} {% endcomment %}
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="{% static 'img/trend/bs-1.jpg' %}" alt="">
+                            <img src="{{ produto.imagem_principal.url }}" alt="{{ produto.nome}}" style="height: 5.75rem; width: 5.5rem;">
                         </div>
                         <div class="trend__item__text">
-                            <h6>Cotton T-Shirt</h6>
+                            <h6>{{ produto.nome }}</h6>
                             <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
@@ -525,10 +529,11 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <div class="product__price">$ 59.0</div>
+                            <div class="product__price">R$ {{ produto.preco }}</div>
                         </div>
                     </div>
-                    <div class="trend__item">
+                    {% comment %} {% endfor %} {% endcomment %}
+                    {% comment %} <div class="trend__item">
                         <div class="trend__item__pic">
                             <img src="{% static 'img/trend/bs-2.jpg' %}" alt="">
                         </div>
@@ -559,17 +564,17 @@
                             </div>
                             <div class="product__price">$ 59.0</div>
                         </div>
-                    </div>
+                    </div> {% endcomment %}
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="trend__content">
                     <div class="section-title">
-                        <h4>Feature</h4>
+                        <h4>Destaque</h4>
                     </div>
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="{% static 'img/trend/f-1.jpg' %}" alt="">
+                            <img src="{{ produto.imagem_principal.url }}" alt="{{ produto.nome}}" style="height: 5.75rem; width: 5.5rem;">
                         </div>
                         <div class="trend__item__text">
                             <h6>Bow wrap skirt</h6>
@@ -580,10 +585,10 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <div class="product__price">$ 59.0</div>
+                            <div class="product__price">R${{ produto.preco }}</div>
                         </div>
                     </div>
-                    <div class="trend__item">
+                    {% comment %} <div class="trend__item">
                         <div class="trend__item__pic">
                             <img src="{% static 'img/trend/f-2.jpg' %}" alt="">
                         </div>
@@ -614,7 +619,7 @@
                             </div>
                             <div class="product__price">$ 59.0</div>
                         </div>
-                    </div>
+                    </div> {% endcomment %}
                 </div>
             </div>
         </div>
@@ -782,27 +787,27 @@
                 <div class="footer__widget">
                     <h6>Quick links</h6>
                     <ul>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#">Sobre</a></li>
                         <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Contato</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-4">
                 <div class="footer__widget">
-                    <h6>Account</h6>
+                    <h6>Conta</h6>
                     <ul>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Orders Tracking</a></li>
-                        <li><a href="#">Checkout</a></li>
-                        <li><a href="#">Wishlist</a></li>
+                        <li><a href="#">Minha Conta</a></li>
+                        <li><a href="#">Acompanhar Pedidos</a></li>
+                        {% comment %} <li><a href="#">Checkout</a></li> {% endcomment %}
+                        {% comment %} <li><a href="#">Wishlist</a></li> {% endcomment %}
                     </ul>
                 </div>
             </div>
             <div class="col-lg-4 col-md-8 col-sm-8">
                 <div class="footer__newslatter">
-                    <h6>NEWSLETTER</h6>
+                    <h6>Notícias</h6>
                     <form action="#">
                         <input type="text" placeholder="Email">
                         <button type="submit" class="site-btn">Subscribe</button>
